# EIT

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CheatSheet.md  Dockerfile  README.md  docker-compose.yml  eit_main.Dockerfile  offb_node.cpp  simulation-docker-compose.yml  start.sh
Raspberry/: Dockerfile  (+2 more)
eit_playground/: CMakeLists.txt  setup_gazebo.bash  setup_posix.bash
eit_playground/init.d-posix/: 6014_sdu_drone  60160_sdu_drone_mono_cam  60161_sdu_drone_mono_cam_downward  6017_sdu_drone_stereo_cam  6018_sdu_drone_depth_cam  6019_sdu_drone_sonar  6020_sdu_drone_hitl
eit_playground/launch/: eit.launch  eit_drone.launch  optitrack.launch  posix.launch  posix_spawn.launch  posix_world.launch  single_vehicle_spawn_sdf.launch
eit_playground/models/chessboard/: model.sdf
eit_playground/models/quick_connect_base/: model.config  model.sdf
eit_playground/models/sdu_drone/: sdu_drone.sdf
eit_playground/scripts/: aruco_marker.py  aruco_pose_estimation.py  calibration.py  calibration_matrix_piCam.npy  calibration_matrix_simulation.npy  cam_sub_opencv.py  connector_actuation.py  distortion_coefficients_piCam.npy  distortion_coefficients_simulation.npy  gpio_cleanup.py  offb_alex_test.py  offb_landing.py  offb_landing_manual.py  offboard_ctrl.py  relay_mocap_grp5.py  sim_attach_detach.py  video_publisher.py
eit_playground/src/: MissionPlan.kml  main.cpp  offb_node_GPS.cpp  offb_node_control.cpp  offb_node_guidance copy.cpp.save  offb_node_guidance save.cpp  offb_node_guidance.cpp  readKML.h
eit_playground/worlds/: aruco_test_2.world  aruco_test_3.world  demo.world  empty.world  simple_aruco.world
(+33 files in other folders)
